--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "~types/*": ["src/types/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
-  "files" : [
-    "src/styles/styled.d.ts"
-  ]
+  "files": ["src/styles/styled.d.ts"]
 }
