--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@arthurpolon/tilt.it": "^0.1.0",
     "axios": "^0.26.1",
+    "framer-motion": "^6.3.4",
     "next": "12.1.4",
     "polished": "^4.2.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
+    "react-virtualized": "^9.22.3",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0"
   },
@@ -24,6 +26,7 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@types/react-virtualized": "^9.21.21",
     "@types/styled-components": "^5.1.24",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
