--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@arthurpolon/tilt.it": "^0.1.0",
+    "@mantine/hooks": "^4.2.7",
     "axios": "^0.26.1",
     "next": "12.1.4",
     "polished": "^4.2.2",
@@ -18,6 +19,7 @@
     "react-icons": "^4.3.1",
     "react-loading-skeleton": "^3.0.3",
     "styled-components": "^5.3.5",
+    "styled-media-query": "^2.1.2",
     "swr": "^1.3.0"
   },
   "devDependencies": {
